--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+<!--     header starts here -->
+    <header>
     <h1 style="text-decoration: underline chocolate; text-align: center;">WELCOME TO LAUNDRY MART</h1>
     <hr>
     <p>
@@ -19,6 +21,10 @@
         quality, Laundry Mart is here to make your life easier—one load at a time. Experience freshness like never
         before! 😁
     </p>
+    </header>
+<!--     header ends here -->
+<!--     main starts here -->
+    <main>
     <hr>
     <img src="laundry mart.png" alt="laundry mart image " height="300" width="300">
     <hr>
@@ -101,8 +107,15 @@
         <br><br>
         <input type="submit" >
     </form>
+        <main/>
+<!--             main ends here -->
+            <hr>
+<!--             footer starts here -->
+            <footer>
     <p>contact us at:info@laundrymart.com <br>
     or 9876543210</p>
+                </footer>
+<!--             footer ends here -->
 </body>
 
 </html>
