--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </tbody>
     </table>
     <h4>BOOK NOW</h4>
-    <form action="thankyou.html">
+    <form action="">
         <label for="">First Name:</label>
         <input type="text" placeholder="enter your name">
         <br><br>
