--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
     <h4>BOOK NOW</h4>
     <form action="">
         <label for="">First Name:</label>
-        <input type="text" placeholder="enter your name">
+        <input type="text" placeholder="enter your name" required >
         <br><br>
         <label for="">Middle Name:</label>
-        <input type="text" placeholder="enter your middle name">
+        <input type="text" placeholder="enter your middle name"  >
         <br><br>
         <label for="">Last Name:</label>
         <input type="text" placeholder="enter your last name">
         <br><br>
         <label for="">Mobile Number:</label>
-        <input type="number" placeholder="enter your Mobile Number">
+        <input type="number" placeholder="enter your Mobile Number" required>
         <br><br>
         <label for="">Email:</label>
         <input type="email" placeholder="enter your Email">
