--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <input type="text" placeholder="enter your last name">
         <br><br>
         <label for="">Mobile Number:</label>
-        <input type="number" placeholder="enter your Mobile Number" required>
+        <input type="number" placeholder="enter your Mobile Number" required minlenght="10">
         <br><br>
         <label for="">Email:</label>
         <input type="email" placeholder="enter your Email">
